--- a/_clean_html/css/fonts.css
+++ b/_clean_html/css/fonts.css
@@ -1,4 +1,6 @@
-@font-face {
+@font-face 
+
+{
 	font-family: "RobotoRegular";
 	src: url("../fonts/RobotoRegular/RobotoRegular.eot");
 	src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix") format("embedded-opentype"),
